# toronto-visual-ai-hackathon-2025

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  README.md  pyproject.toml  run.py  setup.py
notebooks/: dataset.ipynb  fiftyone_dataset_analysis.ipynb  train_face_image_quality.ipynb
scripts/: load_dataset.py  perturb-faces.py  upload_perturbed.py
src/toronto_visual_ai_hackathon/: __init__.py
tests/: test_request.py
